refactor(state): rely on JSX for coverage; drop it() selector parsing
Remove TAG_REGEX and manifest usage from test-coverage.js
Use JSX template scanning only to mark tested permutations
Clean up unused imports; retain caseIds logic
Verified script writes data/test-coverage.json via npm run state:test-coverage

--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -196,10 +196,9 @@ Generated components are organized by state type under `test/wdio/state/`:
   const primitiveCases = caseNosFor(groupIn(primitiveSet));
   const complexCases = caseNosFor(groupIn(complexSet));
 
-  // Derive dynamic test counts per case (titles may map multiple tests to one case)
-  const uniqueTitles = (arr) => Array.from(new Set(arr.flatMap(i => i.testedBy || [])));
-  const primitiveTestsCount = uniqueTitles(groupIn(primitiveSet)).length;
-  const complexTestsCount = uniqueTitles(groupIn(complexSet)).length;
+  // Case counts are driven by caseIds, not explicit test titles
+  const primitiveTestsCount = primitiveCases.length ? primitive.total : 0;
+  const complexTestsCount = complexCases.length ? complex.total : 0;
 
   return (
     <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
