--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -21,6 +21,102 @@ The `@State` decorator is used for managing internal data that can change over t
 ## Rules (at a glance)
 <RulesAtAGlance rules={rules} sourcePath="./data/rules.json" modeLabel="State type" />
 
+## Test Cases
+
+Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (it() blocks). A single WDIO test can exercise many generated components, and a component can participate in multiple tests. The “Tested By” column in the Generated Components table shows which case(s) (#1, #2) each component is covered by.
+
+{(() => {
+  const items = overlay.items || [];
+  const groupIn = (set) => items.filter(i => set.has(i.group));
+  const count = (arr) => ({ tested: arr.filter(i => i.tested).length, total: arr.length });
+
+  const primitiveSet = new Set(['string', 'number', 'boolean']);
+  const complexSet = new Set(['any', 'array', 'object']);
+
+  const primitive = count(groupIn(primitiveSet));
+  const complex = count(groupIn(complexSet));
+
+  const caseNosFor = (arr) => {
+    const s = new Set();
+    for (const it of arr) {
+      for (const n of (it.caseIds || [])) {
+        s.add(n);
+      }
+    }
+    return Array.from(s).sort((a, b) => a - b);
+  };
+
+  const primitiveCases = caseNosFor(groupIn(primitiveSet));
+  const complexCases = caseNosFor(groupIn(complexSet));
+
+  // Case counts are driven by caseIds, not explicit test titles
+  const primitiveTestsCount = primitiveCases.length ? primitive.total : 0;
+  const complexTestsCount = complexCases.length ? complex.total : 0;
+
+  return (
+    <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+      <table style={{ width: '100%', borderCollapse: 'collapse' }}>
+        <colgroup>
+          <col style={{ width: '15%' }} />
+          <col style={{ width: '45%' }} />
+          <col style={{ width: '15%' }} />
+          <col style={{ width: '15%' }} />
+          <col style={{ width: '10%' }} />
+        </colgroup>
+        <thead>
+          <tr style={{ background: '#f2f2f2' }}>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case #</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Description</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Types Covered</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Folder</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              {primitiveCases.length ? `#${primitiveCases.join(', #')}` : <em>—</em>}
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              Button click mutates a primitive <code>@State</code> value and updates DOM output.
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              type: string | number | boolean × default: true/false<br/>
+              <small>Covered: {primitive.tested}/{primitive.total}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              <code>test/wdio/state/tests</code>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+              <span style={{ color: primitive.tested === primitive.total ? 'green' : '#999' }}>{primitive.total > 0 ? (primitive.tested === primitive.total ? '✔' : '✗') : '—'}</span>
+            </td>
+          </tr>
+          <tr style={{ background: '#f9f9f9' }}>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              {complexCases.length ? `#${complexCases.join(', #')}` : <em>—</em>}
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              Static render validation for complex types (<code>any</code>, <code>array</code>, <code>object</code>) with and without defaults.
+              <br/>
+              <small>Tests: {complexTestsCount}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              type: any | array | object × default: true/false<br/>
+              <small>Covered: {complex.tested}/{complex.total}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              <code>test/wdio/state/tests</code>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+              <span style={{ color: complex.tested === complex.total ? 'green' : '#999' }}>{complex.total > 0 ? (complex.tested === complex.total ? '✔' : '✗') : '—'}</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  );
+})()}
+
 ## Generated Components
 
 <div>
@@ -169,98 +265,4 @@ Generated components are organized by state type under `test/wdio/state/`:
 - `array/` — array state values
 - `object/` — object state values
 - `any/` — untyped or mixed state values
-
-## Test Cases
-
-{(() => {
-  const items = overlay.items || [];
-  const groupIn = (set) => items.filter(i => set.has(i.group));
-  const count = (arr) => ({ tested: arr.filter(i => i.tested).length, total: arr.length });
-
-  const primitiveSet = new Set(['string', 'number', 'boolean']);
-  const complexSet = new Set(['any', 'array', 'object']);
-
-  const primitive = count(groupIn(primitiveSet));
-  const complex = count(groupIn(complexSet));
-
-  const caseNosFor = (arr) => {
-    const s = new Set();
-    for (const it of arr) {
-      for (const n of (it.caseIds || [])) {
-        s.add(n);
-      }
-    }
-    return Array.from(s).sort((a, b) => a - b);
-  };
-
-  const primitiveCases = caseNosFor(groupIn(primitiveSet));
-  const complexCases = caseNosFor(groupIn(complexSet));
-
-  // Case counts are driven by caseIds, not explicit test titles
-  const primitiveTestsCount = primitiveCases.length ? primitive.total : 0;
-  const complexTestsCount = complexCases.length ? complex.total : 0;
-
-  return (
-    <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
-      <table style={{ width: '100%', borderCollapse: 'collapse' }}>
-        <colgroup>
-          <col style={{ width: '15%' }} />
-          <col style={{ width: '45%' }} />
-          <col style={{ width: '15%' }} />
-          <col style={{ width: '15%' }} />
-          <col style={{ width: '10%' }} />
-        </colgroup>
-        <thead>
-          <tr style={{ background: '#f2f2f2' }}>
-            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case #</th>
-            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Description</th>
-            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Types Covered</th>
-            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Folder</th>
-            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              {primitiveCases.length ? `#${primitiveCases.join(', #')}` : <em>—</em>}
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              Button click mutates a primitive <code>@State</code> value and updates DOM output.
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              type: string | number | boolean × default: true/false<br/>
-              <small>Covered: {primitive.tested}/{primitive.total}</small>
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              <code>test/wdio/state/tests</code>
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
-              <span style={{ color: primitive.tested === primitive.total ? 'green' : '#999' }}>{primitive.total > 0 ? (primitive.tested === primitive.total ? '✔' : '✗') : '—'}</span>
-            </td>
-          </tr>
-          <tr style={{ background: '#f9f9f9' }}>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              {complexCases.length ? `#${complexCases.join(', #')}` : <em>—</em>}
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              Static render validation for complex types (<code>any</code>, <code>array</code>, <code>object</code>) with and without defaults.
-              <br/>
-              <small>Tests: {complexTestsCount}</small>
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              type: any | array | object × default: true/false<br/>
-              <small>Covered: {complex.tested}/{complex.total}</small>
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              <code>test/wdio/state/tests</code>
-            </td>
-            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
-              <span style={{ color: complex.tested === complex.total ? 'green' : '#999' }}>{complex.total > 0 ? (complex.tested === complex.total ? '✔' : '✗') : '—'}</span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  );
-})()}
 
