Rename the tests file

--- a/test/storybook/docs/Testing/Decorators/State/@State.mdx
+++ b/test/storybook/docs/Testing/Decorators/State/@State.mdx
@@ -85,7 +85,7 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
               <small>Covered: {primitive.tested}/{primitive.total}</small>
             </td>
             <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              <code>test/wdio/state/components</code>
+              <code>test/wdio/state/tests</code>
             </td>
             <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
               <span style={{ color: primitive.tested === primitive.total ? 'green' : '#999' }}>{primitive.total > 0 ? (primitive.tested === primitive.total ? '✔' : '✗') : '—'}</span>
@@ -105,7 +105,7 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
               <small>Covered: {complex.tested}/{complex.total}</small>
             </td>
             <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              <code>test/wdio/state/components</code>
+              <code>test/wdio/state/tests</code>
             </td>
             <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
               <span style={{ color: complex.tested === complex.total ? 'green' : '#999' }}>{complex.total > 0 ? (complex.tested === complex.total ? '✔' : '✗') : '—'}</span>
