--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -1,6 +1,6 @@
 import componentData from './Component/coverage-data.json';
 import propData from './Prop/coverage-data.json';
-import stateData from './State/coverage-data.json';
+import stateData from './State/data/test-coverage.json';
 import eventData from './Event/coverage-data.json';
 import listenData from './Listen/coverage-data.json';
 import methodData from './Method/coverage-data.json';
