--- a/test/storybook/docs/Testing/Decorators/Prop/@Prop.mdx
+++ b/test/storybook/docs/Testing/Decorators/Prop/@Prop.mdx
@@ -1,7 +1,7 @@
-import rules from './rules.json';
+import rules from './data/rules.json';
 import { Meta } from '@storybook/addon-docs/blocks';
-import data from './coverage-data.json';
-import overlay from './coverage-overlay.json';
+import data from './data/components.json';
+import overlay from './data/test-coverage.json';
 import React, { useMemo, useState } from 'react';
 import RulesAtAGlance from '../_shared/RulesAtAGlance.jsx';
 
@@ -18,7 +18,103 @@ The `@Prop` decorator exposes public properties on components. This page documen
 - mutable: when true, allows internal mutation of the prop.
 
 ## Rules (at a glance)
-<RulesAtAGlance rules={rules} sourcePath="./rules.json" modeLabel="Prop type" />
+<RulesAtAGlance rules={rules} sourcePath="./data/rules.json" modeLabel="Prop type" />
+
+## Test Cases
+
+Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (it() blocks). A single WDIO test can exercise many generated components, and a component can participate in multiple tests. The “Tested By” column in the Generated Components table shows which case(s) (#1, #2) each component is covered by.
+
+{(() => {
+  const items = overlay.items || [];
+  const groupIn = (set) => items.filter(i => set.has(i.group));
+  const count = (arr) => ({ tested: arr.filter(i => i.tested).length, total: arr.length });
+
+  const primitiveSet = new Set(['string', 'number', 'boolean']);
+  const complexSet = new Set(['Array', 'Object', 'Set']);
+
+  const primitive = count(groupIn(primitiveSet));
+  const complex = count(groupIn(complexSet));
+
+  const caseNosFor = (arr) => {
+    const s = new Set();
+    for (const it of arr) {
+      for (const n of (it.caseIds || [])) {
+        s.add(n);
+      }
+    }
+    return Array.from(s).sort((a, b) => a - b);
+  };
+
+  const primitiveCases = caseNosFor(groupIn(primitiveSet));
+  const complexCases = caseNosFor(groupIn(complexSet));
+
+  // Case counts are driven by caseIds, not explicit test titles
+  const primitiveTestsCount = primitiveCases.length ? primitive.total : 0;
+  const complexTestsCount = complexCases.length ? complex.total : 0;
+
+  return (
+    <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
+      <table style={{ width: '100%', borderCollapse: 'collapse' }}>
+        <colgroup>
+          <col style={{ width: '15%' }} />
+          <col style={{ width: '45%' }} />
+          <col style={{ width: '15%' }} />
+          <col style={{ width: '15%' }} />
+          <col style={{ width: '10%' }} />
+        </colgroup>
+        <thead>
+          <tr style={{ background: '#f2f2f2' }}>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Case #</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Description</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Types Covered</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'left' }}>Test Folder</th>
+            <th style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              {primitiveCases.length ? `#${primitiveCases.join(', #')}` : <em>—</em>}
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              Runtime coverage for primitive prop types. Validate render, reflect, and mutability combinations.
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              type: string | number | boolean × reflect: true/false × mutable: true/false<br/>
+              <small>Covered: {primitive.tested}/{primitive.total}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              <code>test/wdio/prop/tests</code>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+              <span style={{ color: primitive.tested === primitive.total ? 'green' : '#999' }}>{primitive.total > 0 ? (primitive.tested === primitive.total ? '✔' : '✗') : '—'}</span>
+            </td>
+          </tr>
+          <tr style={{ background: '#f9f9f9' }}>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              {complexCases.length ? `#${complexCases.join(', #')}` : <em>—</em>}
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              Static render and reflection behavior for complex prop types (<code>Array</code>, <code>Object</code>, <code>Set</code>).
+              <br/>
+              <small>Tests: {complexTestsCount}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              type: Array | Object | Set × reflect: true/false × mutable: true/false<br/>
+              <small>Covered: {complex.tested}/{complex.total}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              <code>test/wdio/prop/tests</code>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+              <span style={{ color: complex.tested === complex.total ? 'green' : '#999' }}>{complex.total > 0 ? (complex.tested === complex.total ? '✔' : '✗') : '—'}</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  );
+})()}
 
 ## Generated Components
 
@@ -28,7 +124,10 @@ The `@Prop` decorator exposes public properties on components. This page documen
 </div>
 
 <p style={{ marginTop: 8 }}>
-  One row per unique combination of <code>type</code> × <code>reflect</code> × <code>mutable</code>. If a combo fails to compile, capture it in <code>rules.json</code> and regenerate. The “Tested / Test Cases” column is populated in Phase 2.
+  This section lists the generated components we build to stress the compiler. Each row is one component with a
+  unique combination of decorator options (<code>type</code> × <code>reflect</code> × <code>mutable</code>). If a combo fails to compile,
+  we capture that as a rule in <code>rules.json</code>, update the list, and regenerate. The “Tested By” column reflects which
+  high‑level test cases cover each component.
 </p>
 
 export const GeneratedComponentsTable = () => {
@@ -36,17 +135,18 @@ export const GeneratedComponentsTable = () => {
 
   const rows = useMemo(() => {
     const items = overlay.items || [];
+    const map = new Map(items.map(i => [i.optionsKey, i]));
     return (data.coveredPermutations || []).map((p, i) => {
       const [type, reflect, mutable] = p.options || [];
-      const key = `${type}|${reflect}|${mutable}`;
-      const oi = items.find(x => x.optionsKey === key || x.tag?.includes(type)) || {};
+      const key = (p.options || []).join('|');
+      const oi = map.get(key) || {};
+      const caseNumbers = Array.isArray(oi.caseIds) ? [...oi.caseIds].sort((a,b) => a-b) : [];
       return {
         index: i,
         type,
         reflect,
         mutable,
-        tested: !!oi.tested,
-        tests: oi.testedBy || [],
+        caseNumbers,
       };
     });
   }, []);
@@ -57,10 +157,9 @@ export const GeneratedComponentsTable = () => {
     <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
       <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
         <colgroup>
-          <col style={{ width: '22%' }} />
-          <col style={{ width: '18%' }} />
-          <col style={{ width: '18%' }} />
-          <col style={{ width: '12%' }} />
+          <col style={{ width: '30%' }} />
+          <col style={{ width: '20%' }} />
+          <col style={{ width: '20%' }} />
           <col style={{ width: '30%' }} />
         </colgroup>
         <thead>
@@ -68,29 +167,23 @@ export const GeneratedComponentsTable = () => {
             <th>Type</th>
             <th>reflect</th>
             <th>mutable</th>
-            <th style={{ textAlign: 'center' }}>Tested</th>
-            <th>Test Cases</th>
+            <th>Tested By</th>
           </tr>
         </thead>
         <tbody>
           {rowsToRender.map((r) => (
-            <tr key={r.index} style={{ background: r.tested ? '#fbfffb' : '#fff' }}>
+            <tr key={r.index}>
               <td>{r.type}</td>
               <td>{r.reflect}</td>
               <td>{r.mutable}</td>
-              <td style={{ textAlign: 'center' }}>
-                {r.tested ? <span style={{ color: 'green' }}>✔</span> : <span style={{ color: '#999' }}>—</span>}
-              </td>
               <td>
-                {r.tests.length ? (
-                  <ul style={{ margin: 0, paddingLeft: 16 }}>
-                    {r.tests.map((t, k) => (
-                      <li key={k}>{t}</li>
-                    ))}
-                  </ul>
-                ) : (
-                  <em>—</em>
-                )}
+                {r.caseNumbers && r.caseNumbers.length
+                  ? (
+                      r.caseNumbers.length === 1
+                        ? `#${r.caseNumbers[0]}`
+                        : r.caseNumbers.join(' & ')
+                    )
+                  : <em>—</em>}
               </td>
             </tr>
           ))}
@@ -166,8 +259,12 @@ export const GeneratedComponentsTable = () => {
 
 ## Component Grouping
 
-Components are grouped by prop type under `test/wdio/prop/matrix/<type>/`. The spec files live under `test/wdio/prop/tests`.
+Generated components are organized by prop type under `test/wdio/prop/components/`:
 
-## Test Cases
+- `string/` — string props
+- `number/` — numeric props
+- `boolean/` — boolean props
+- `Array/` — array props
+- `Object/` — object props
+- `Set/` — set props
 
-- Phase 2 placeholder: tests will be propagated across generated components and recorded in `coverage-overlay.json`.
