--- a/test/storybook/docs/Testing/Decorators/Prop/@Prop.mdx
+++ b/test/storybook/docs/Testing/Decorators/Prop/@Prop.mdx
@@ -35,6 +35,12 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
   const primitive = count(groupIn(primitiveSet));
   const complex = count(groupIn(complexSet));
 
+  const normalizeBool = (v) => v === true || v === 'true' || v === '✓';
+  const primitiveReflectTrueArr = items.filter(i => primitiveSet.has(i.group) && normalizeBool(i.options?.reflect) === true);
+  const primitiveReflectFalseArr = items.filter(i => primitiveSet.has(i.group) && normalizeBool(i.options?.reflect) === false);
+  const primitiveReflectTrue = count(primitiveReflectTrueArr);
+  const primitiveReflectFalse = count(primitiveReflectFalseArr);
+
   const caseNosFor = (arr) => {
     const s = new Set();
     for (const it of arr) {
@@ -47,10 +53,14 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
 
   const primitiveCases = caseNosFor(groupIn(primitiveSet));
   const complexCases = caseNosFor(groupIn(complexSet));
+  const reflectTrueCases = caseNosFor(primitiveReflectTrueArr);
+  const reflectFalseCases = caseNosFor(primitiveReflectFalseArr);
 
   // Case counts are driven by caseIds, not explicit test titles
   const primitiveTestsCount = primitiveCases.length ? primitive.total : 0;
   const complexTestsCount = complexCases.length ? complex.total : 0;
+  const reflectTrueTestsCount = reflectTrueCases.length ? primitiveReflectTrue.total : 0;
+  const reflectFalseTestsCount = reflectFalseCases.length ? primitiveReflectFalse.total : 0;
 
   return (
     <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
@@ -73,9 +83,7 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
         </thead>
         <tbody>
           <tr>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              {primitiveCases.length ? `#${primitiveCases.join(', #')}` : <em>—</em>}
-            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>#1</td>
             <td style={{ padding: '8px', border: '1px solid #ddd' }}>
               Runtime coverage for primitive prop types. Validate render, reflect, and mutability combinations.
             </td>
@@ -91,9 +99,7 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
             </td>
           </tr>
           <tr style={{ background: '#f9f9f9' }}>
-            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
-              {complexCases.length ? `#${complexCases.join(', #')}` : <em>—</em>}
-            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>#2</td>
             <td style={{ padding: '8px', border: '1px solid #ddd' }}>
               Static render and reflection behavior for complex prop types (<code>Array</code>, <code>Object</code>, <code>Set</code>).
               <br/>
@@ -108,6 +114,38 @@ Note: Test cases are high‑level scenarios, not a 1‑to‑1 mapping to tests (
             </td>
             <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
               <span style={{ color: complex.tested === complex.total ? 'green' : '#999' }}>{complex.total > 0 ? (complex.tested === complex.total ? '✔' : '✗') : '—'}</span>
+            </td>
+          </tr>
+          <tr>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>#3</td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              Reflect=true behavior for primitives: attribute presence/value matches prop updates.
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              string | number | boolean × reflect: true<br/>
+              <small>Covered: {primitiveReflectTrue.tested}/{primitiveReflectTrue.total}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              <code>test/wdio/prop/tests</code>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+              <span style={{ color: primitiveReflectTrue.tested === primitiveReflectTrue.total ? 'green' : '#999' }}>{primitiveReflectTrue.total > 0 ? (primitiveReflectTrue.tested === primitiveReflectTrue.total ? '✔' : '✗') : '—'}</span>
+            </td>
+          </tr>
+          <tr style={{ background: '#f9f9f9' }}>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>#4</td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              Reflect=false behavior for primitives: no attribute is reflected when prop updates.
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              string | number | boolean × reflect: false<br/>
+              <small>Covered: {primitiveReflectFalse.tested}/{primitiveReflectFalse.total}</small>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd' }}>
+              <code>test/wdio/prop/tests</code>
+            </td>
+            <td style={{ padding: '8px', border: '1px solid #ddd', textAlign: 'center' }}>
+              <span style={{ color: primitiveReflectFalse.tested === primitiveReflectFalse.total ? 'green' : '#999' }}>{primitiveReflectFalse.total > 0 ? (primitiveReflectFalse.tested === primitiveReflectFalse.total ? '✔' : '✗') : '—'}</span>
             </td>
           </tr>
         </tbody>
